# app-image-optimizer

./: Cargo.toml  README.md  config.yaml
resources/: upload.rs  variant.rs
schemas/: schema.graphql
src/: lib.rs
